# IronSight

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.tr.md  SECURITY.md  VISION.md
.agents/workflows/: start-hot-reload.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
audit/: 00_executive_summary.k1.md  00_executive_summary.md  01_ironsight_core.k1.md  01_ironsight_core.md  01_ironsight_core.steps.md  02_ironsight_heuristic.k1.md  02_ironsight_heuristic.md  02_ironsight_heuristic.steps.md  03_ironsight_kernel.k1.md  03_ironsight_kernel.md  03_ironsight_kernel.steps.md  04_ironsight_memory.k1.md  04_ironsight_memory.md  04_ironsight_memory.steps.md  05_ironsight_network.k1.md  05_ironsight_network.md  05_ironsight_network.steps.md  06_ironsight_report.k1.md  06_ironsight_report.md  06_ironsight_report.steps.md  07_ironsight_response.k1.md  07_ironsight_response.md  07_ironsight_response.steps.md  08_ironsight_security.k1.md  08_ironsight_security.md  08_ironsight_security.steps.md  09_ironsight_service.k1.md  09_ironsight_service.md  09_ironsight_service.steps.md
crates/ironsight-response/: Cargo.toml
crates/ironsight-response/src/: actions.rs  audit.rs  exclusions.rs  handler.rs  lib.rs  rate_limit.rs
crates/ironsight-security/: Cargo.toml
crates/ironsight-security/src/: audit.rs  entropy.rs  lib.rs  modules.rs  path_analysis.rs  signature.rs
tasks/: idea.md  implementation-plan.md  roadmap.md  workshop.md
(+399 files in other folders)
