[package]
name = "ironsight-response"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Automated response handler — suspend, forensic dump, kill, exclusion list"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
regex = "1.10"
parking_lot = "0.12.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
