[package]
name = "ironsight-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary integrity analysis — hash, entropy, signature, module enumeration"

[dependencies]
ironsight-core.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
glob-match = "0.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
cross-authenticode = "1.0.2"
